# Argus-Synapse

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  setup.ps1  setup.sh
crates/argus-agent/: Cargo.toml
crates/argus-agent/src/: lib.rs  state_machine.rs
crates/argus-cli/: Cargo.toml
crates/argus-cli/src/: main.rs
crates/argus-ghostdag/src/: block.rs  coloring.rs  dag.rs
crates/argus-linearizer/: Cargo.toml
crates/argus-linearizer/src/: server.rs  stream.rs
crates/argus-node/: Cargo.toml
crates/argus-node/src/: kaspad_client.rs  lib.rs
crates/argus-pybridge/: Cargo.toml
crates/argus-pybridge/src/: lib.rs
python/argus_gateway/: main.py
python/argus_gateway/services/: dag_client.py
python/argus_rl/: ghostdag_env.py
