[package]
name = "argus-agent"
version.workspace = true
edition.workspace = true

[dependencies]
argus-ghostdag = { path = "../argus-ghostdag" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
anyhow = "1.0"

[dev-dependencies]
tokio = { workspace = true }
